# lenovo-kbd-backlight

./: .gitignore  README.md  lenovo-kbd-backlight.cfg  lenovo-kbd-backlight.service  setup.cfg
service/: __init__.py  config.py  kbd_bl_api.py
