[metadata]
name = lenovo_kbd_backlight_service
version = 0.1.0
author = Danny Baumann
author_email = dannybaumann@web.de
description = A daemon controlling the keyboard backlight on Lenovo Legion 5 Pro
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD
url = https://github.com/maniac103/lenovo-kbd-backlight
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Topic :: System :: Hardware :: Hardware Drivers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
packages = service
install_requires =
    configobj
    hidapi
    inotify
    inotify_simple
    pyroute2
    systemd-python
   
[options.entry_points]
console_scripts =
    lenovo-kbd-backlight-service = service:main
